# CGPForConnect5Releases

./: CMakeLists.txt  README.md
connect5/: README.md
connect5/code/: CMakeLists.txt  README.md
connect5/code/src/: main.cpp
connect5/code/src/core/: Engine.cpp  OpenSteps.cpp
connect5/code/src/core/include/: APICore.hpp  Engine.hpp  Enums.hpp  Export.h  Step.hpp  Utils.hpp
connect5/code/src/engine/include/: RandomEngine.hpp
connect5/releases/: README.md
connect6/: README.md
connect6/code/: .gitignore  CMakeLists.txt  README.md
connect6/code/src/: main.cpp
connect6/code/src/core/: Engine.cpp  Utils.cpp
connect6/code/src/core/include/: APICore.hpp  Engine.hpp  Enums.hpp  Export.h  OpenSteps.hpp  Step.hpp
connect6/code/src/engine/: RandomEngine.cpp
connect6/code/src/engine/include/: RandomEngine.hpp
connect6/releases/: README.md
src/: main.cpp
src/core/: Engine.cpp  Step.cpp  Utils.cpp
src/core/include/: APICore.hpp  Engine.hpp  Export.h  OpenSteps.hpp  Step.hpp  Utils.hpp
src/engine/: RandomEngine.cpp
src/engine/include/: RandomEngine.hpp
